2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new_cb): Fix dangling
	pointer error where a resolved SoupAddress is passed to the callback,
	and then realloc'd.

	* src/soup-core/soup-headers.c (soup_headers_parse_response):
	Don't require gchar const **status_phrase.

2001-07-29  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-apache.c (soup_apache_message_create): strdup
	response_phrase.

	* src/soup-core/soup-httpd.c (soup_httpd_read_done_cb): Ditto.
	
	* src/soup-core/soup-message.c (soup_message_free): Free
	response_phrase.

	* src/soup-core/soup-context.c (soup_try_existing_connections):
	Revert accidental commit.

	* src/soup-core/soup-queue.c (soup_get_request_header): Only
	inhibit Content-Length for GET and HEAD if request.length is 0;
	(soup_message_queue): Free response_phrase on requeue.

	* src/soup-core/soup-socket.c (soup_address_new): Fix
	formatting.

2001-07-26  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-queue.c (soup_get_request_header): Don't display
	the SOAPAction header if it's either provided by the user or it is
	NULL.

2001-07-26  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump the version up to 0.4.1.

	* src/soup-core/soup-queue.c (soup_get_request_header): Fix a logic
	error. Send the actual version of Soup with the User-Agent header
	instead of always 0.1.

2001-07-25  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new,
	soup_address_get_name): Close a bunch of leaked file descriptors from
	piping.

2001-07-19  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_get_request_header): Allow
	override of http version. Only include Content-Length if method is
	not GET or HEAD.

	* src/soup-core/soup-message.c (soup_message_new): Set default
	http_version to SOUP_HTTP_1_1;
	(soup_message_set_http_version): Impl.
	(soup_message_get_flags): Check for NULL.

	* src/soup-core/soup-private.h: Add http_version to _SoupMessagePrivate.
